--- a/style.css
+++ b/style.css
@@ -468,7 +468,7 @@ padding-top: 50px;
 	}
 	.service .box, .volunteer .box,
 	.news .box, .animals .box, .help .box, 
-	.contacts .box, .about .box {
+	.contacts .box, .about .box, .home .box {
 		padding-top: 80px !important;
 	}
 	.volunteer .content, .animals .content,
@@ -490,7 +490,7 @@ padding-top: 50px;
 	.news .box, .animals .box {
 		margin: 0;
 	}
-	.help, .contacts, .animals, .service, .news, .volunteer, .about, .home{
+	.help, .contacts, .animals, .service, .news, .volunteer, .about, .home {
 		height: 100%;
 	}
 	.help .box, .news .box {
